fixed alignment issue of search bar in mobile view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,7 +87,8 @@ body {
     }
 
     body {
-        padding-bottom: 15%;
+        /* padding-bottom: 15%; */
+        /* overflow: hidden; */
     }
 
     .blog-content-image{
